--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
+    integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5"
+    crossorigin="anonymous"
+  />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       margin: 0;
+      overflow: hidden;
+      background-color: rgb(20, 20, 20);
     }
 
     .hidden {
@@ -15,18 +24,59 @@
       font-size: 64px;
     }
 
-    .winner {
+    h2 {
+      color: white;
+      font-size: 24px;
+    }
+
+    .controls {
+      color: white;
+      font-size: 25px;
+    }
+
+    .start {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
+      min-height: 80vh;
+    }
+
+    .button {
+      font-size: 170%;
+    }
+
+    .winner {
       position: absolute;
-      z-index: 1;
-      height: 100vh;
-      width: 100vw;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   </style>
 </head>
 <body>
-  <div class="winner hidden"><h1>You Win!</h1></div>
+  <div class="start">
+    <h1>aMaze</h1>
+    <div class="pure-button-group">
+      <button class="button pure-button" onclick="startGame(1)">Easy</button>
+      <button class="button pure-button" onclick="startGame(2)">Medium</button>
+      <button class="button pure-button" onclick="startGame(3)">Hard</button>
+      <button class="button pure-button" onclick="startGame(4)">
+        Impossible
+      </button>
+    </div>
+    <h2>Use W-A-S-D or arrow keys to move</h2>
+  </div>
+  <div></div>
+  <div class="winner hidden">
+    <h1>You Win!</h1>
+    <button class="button pure-button" onclick="location.reload()">
+      Retry?
+    </button>
+  </div>
   <script src="index.js"></script>
 </body>
