--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       font-size: 24px;
     }
 
-    .controls {
+    .text {
       color: white;
-      font-size: 25px;
+      font-size: 20px;
+      font-style: italic;
     }
 
     .start {
@@ -70,6 +71,7 @@
       </button>
     </div>
     <h2>Use W-A-S-D or arrow keys to move</h2>
+    <div class="text">Desktop only for now</div>
   </div>
   <div></div>
   <div class="winner hidden">
